# zmq-todo

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  remark.md
docs/: mixture.drawio  zmq.md
zmq-cpp/: CMakeLists.txt  README.md
zmq-cpp/crtp_dyn/: C.hpp  CMakeLists.txt  main.cc
zmq-cpp/include/: common.hpp  json.hpp
zmq-cpp/majordomo/: CMakeLists.txt  README.md  adt.cc  adt.h  broker.cc  broker.h  client.cc  client.h  worker.cc  worker.h
zmq-cpp/mixture/: CMakeLists.txt  ClientService.hpp  README.md  WorkerService.hpp  adt.cc  adt.h  broker.cc  broker.h  client.cc  client.h  client_http.cc  client_http.h  client_http_main.cc  client_main.cc  worker.cc  worker.h
zmq-cpp/mul_msg/: CMakeLists.txt  adt.cc  adt.h  test_mul_msg.cpp
zmq-cpp/protocol/: CMakeLists.txt  DealerManager.hpp  ProtoMsg.h  PubManager.hpp  SubManager.hpp
zmq-cpp/proxy_req_router/: adt.cc  adt.h  client.cc  middleware.cc  middleware.h  worker.cc  worker.h
zmq-cpp/src/: client.cc  worker.cc
zmq-cpp/tests/: CMakeLists.txt  proxy_dealer_client.cc  proxy_dealer_client1.cc  proxy_dealer_router.cc  proxy_dealer_worker.cc  proxy_pub.cc  proxy_pub_sub.cc  proxy_rep_worker.cc  proxy_req_client.cc  proxy_router_router.cc  proxy_router_worker.cc  proxy_sub.cc  simple_dealer.cc  simple_dealer_client.cc  simple_dealer_server.cc  simple_pair.cc  simple_pub_client.cc  simple_pub_server.cc  simple_rep.cc  simple_req.cc  simple_router_client.cc  simple_router_server.cc  simple_sub_client.cc  simple_sub_server.cc  socket_monitor.cc  xt_dealer.cc  xt_dealer2.cc  xt_pub.cc  xt_sub.cc
zmq-cpp/todo/: CMakeLists.txt  adt.h  client.h  middleware.cc  middleware.h
zmq-py/: README.md
zmq-py/common/: const.py
zmq-py/tests/: simple_dealer.py  simple_pub.py  simple_router.py  simple_sub.py  socket_monitor.py
zmq-rs/: Cargo.toml  README.md
zmq-rs/src/: common.rs  lib.rs
